--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ nav a{
     border: 2px solid transparent;
     border-radius: 6px;
     transition: all 0.2s;
+    height: fit-content;
 }
 nav a:hover{
     background-color: rgba(255, 166, 0, 0.171);
@@ -56,5 +57,5 @@ input:focus{
 }
 
 .brb {
-    border: 1px solid red;
+    border: 1px solid blue;
 }
