--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,6 @@
     }
 }
 
-.shit{
-    color: rgb(211, 211, 211);
-} 
 
 body {
     background-color: var(--color-background);
@@ -82,16 +79,11 @@ input:focus {
     scale: 0.9;
 }
 
-.sidebar {
-    /* display: none; */
-    position: absolute;
-    right: 0;
-    z-index: 10;
-    padding: 1rem;
-    /* bottom: -1.5rem; */
-    top: 3.5rem;
-    background-color: #222;
-    /* height: ; */
+.join{
+    background-image: url('https://i.ibb.co/HX6xm4L/2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 
